# mirage-script

./: .gitignore  LANGUAGE_REFERENCE.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
editor-support/vscode/: README.md  language-configuration.json  miragescript-syntax-0.1.0.vsix  miragescript-syntax-0.2.0.vsix  package.json
editor-support/vscode/syntaxes/: mirage.tmLanguage.json
examples/add_two_numbers/: README.md  add_two_numbers.mirage
examples/longest_unique_substring/: README.md  longest_unique_substring.mirage
examples/max_value_finder/: README.md  max_value_finder.mirage  pile.json
examples/merge_intervals/: README.md  merge_intervals.mirage
examples/sudoku_solver/: README.md  sudoku_strategy_workshop.mirage
examples/sudoku_solver/sample_outputs/: guardian_easy_solution.txt
examples/two_sum/: README.md  two_sum.mirage
examples/universal_translator/: README.md  polyglot_translator.mirage  sample_press_release.txt  sample_python_snippet.py
examples/universal_translator/sample_outputs/: analytics_helper_python_to_typescript.txt  press_release_english_to_spanish.txt
examples/valid_parentheses/: README.md  valid_parentheses.mirage
src/mirage_engine/: __init__.py  cli.py  interpreter.py  llm_client.py  model.py  parser.py  state.py  system_prompt.txt
tests/: test_interpreter.py  test_parser.py
