[project]
name = "llm-as-interpreter"
version = "0.1.0"
description = "Hallucination-driven MirageScript interpreter"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mirage = "mirage_engine.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["mirage_engine"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
